# plinth-video

./: .gitignore  CLAUDE.md  FEATURES.md  IMPROVEMENTS.md  README.md  TASKS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts
crates/plinth-core/: Cargo.toml
crates/plinth-core/src/: beacon.rs  event.rs  ffi.rs  jni.rs  lib.rs  metrics.rs  session.rs  wasm.rs
dev/: index.html  package.json  server.ts  shaka.html
docs/: beacon-payload.samples.json  beacon-payload.schema.json  new-player-integration.md  overview-prd.md
docs/prd/: android-media3.md  dashjs-integration.md  engagement-metrics.md  initial-rendition.md  playback-position-tracking.md  player-beacon-validation.md  shaka-integration.md
docs/reference/: beacon-payload.md  beacon-payload.samples.json  beacon-payload.schema.json  new-player-integration.md  player-state-machine.mermaid  quickstart-avplayer.md  quickstart-dashjs.md  quickstart-hlsjs.md  quickstart-media3.md  quickstart-shaka.md  sdk-api.md
docs/tdd/: android-media3.md  dashjs-integration.md  heartbeat-inactivity-timeout.md  initial-rendition.md  playback-position-tracking.md  seek-tracking.md  shaka-integration.md  viewership-metrics.md
notes/features/: initial-rendition.md
samples/android/app/: build.gradle.kts
samples/macos/: Package.swift
samples/macos/.build/: build.db  (+2 more)
samples/web/: dashjs-main.ts  dashjs.html  demo-shell.ts  demo.html  hlsjs-main.ts  hlsjs.html  home.html  index.html  main.ts  package.json  server.ts  shaka-main.ts  shaka.html
scripts/: build-xcframework.sh  release-npm.sh
(+10 files in other folders)
